--- a/index.html
+++ b/index.html
@@ -47,11 +47,25 @@
         <div class="grid_2">
             <div>
                 <p>Mit navn er Sara Grønkjær og jeg studerer multimediedesigner på KEA. I forbindelse med vores eksamen her på 1. semester har vi skulle producere et online portfolio over vores tidligere projekter og udfaldet af dette er altså denne hjemmeside. Her viser jeg det færdige resultat af disse projekter og beskriver hvad jeg har lært. Derudover er det muligt at læse mere om mig via linket herunder.</p>
-                <a href="om.html">LÆS MERE →</a>
+                <a href="om.html">LÆS OM MIG →</a>
             </div>
             <div class="selvportraet1">
                 <img src="img/selvportraet1.webp">
             </div>
+        </div>
+
+        <div class="projekter">
+            <h2>PROJEKTER</h2>
+        </div>
+        <div class="grid_3">
+            <div>
+                <p>Første semester af multimediedesignuddannelsen er bygget op omkring forskellige temaer. Ud af disse har jeg valgt at fremhæve følgende i mit portfolio: Grundlæggende web, grundlæggende UI/UX, animation og grundlæggende indhold. Til hver tema har vi skulle aflevere en større opgave for at vise at vi har nået de læringsmål der er blevet sat. Læs mere om de forskellige temaer, opgaverne og hvad jeg har lært af disse via linket herunder.</p>
+                <a href="projekter.html">SE PROJEKTER →</a>
+            </div>
+            <div>
+                <p>Oversigt</p>
+            </div>
+            
         </div>
     </main>
     
