--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
             
         </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            <a href="index.html">FORSIDE</a>
+            <a href="projekter.html">PROJEKTER</a>
+            <a href="om.html">OM</a>
+        </div>
+    </footer>
     
     <script src="script.js"></script>
 </body>
