--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
     </main>
 
     <footer>
-        <div class="footer">
+        <div class="footer_menu">
             <a href="index.html">FORSIDE</a>
             <a href="projekter.html">PROJEKTER</a>
             <a href="om.html">OM</a>
+        </div>
+
+        <div class="footer_tekst">
+            <h3>2024, Sara Grønkjær</h3>
         </div>
     </footer>
     
