--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <a href="projekter.html">PROJEKTER</a>
             <a href="om.html">OM</a>
             </div
-            <div class="footer_tekst">
-              <h3>2024, Sara Grønkjær</h3> 
+            <div>
+                <h3>2024, Sara Grønkjær</h3> 
             </div>
         </div>
     </footer>
