--- a/om.html
+++ b/om.html
@@ -21,6 +21,20 @@
     <meta name="description" content="Dette er mit portfolio over mine projekter fra første semester på multimediedesigner.">
 </head>
 <body>
+    <header>   
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">FORSIDE</a></li>
+                <li><a href="projekter.html">PROJEKTER</a></li>
+                <li><a href="om.html">OM</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
+    </header>
     
     <script src="script.js"></script>
 </body>
