--- a/om.html
+++ b/om.html
@@ -20,7 +20,7 @@
 
     <meta name="description" content="Dette er mit portfolio over mine projekter fra første semester på multimediedesigner.">
 </head>
-<body>
+<body>    
     <header>   
         <nav>
             <ul class="menu">
@@ -35,7 +35,37 @@
             </div>
         </nav>
     </header>
-    
+
+    <main>
+        <div class="grid_om">
+            <div>
+        <h1>OM</h1>
+        <p>For mig udgør multimediedesigneruddannelsen det ideelle studie, da den forener de kreative områder, som jeg er draget af. Fotografi er et af dem, hvilket også afspejler sig i mit online portfolio over mine værker som jeg lavede i forbindelse med tema 3. Derudover fascineres jeg af kommunikation, og at kunne arbejde med dette på forskellige niveauer finder jeg meget givende.
+            Selvom jeg endnu ikke har fastlagt præcis, hvordan jeg vil anvende denne uddannelse, når jeg står overfor at søge job, håber jeg at blive inspireret undervejs i forløbet. 
+            Umildbart kan jeg forestille mig at arbejde i et bureau, der varetager forskellige opgaver for virksomheder såsom at redesigne deres hjemmeside eller lignende. Ved siden af studiet arbejder jeg som SoMe-ansvarlig for en café, hvilket harmonerer godt med multimediedesigneruddannelsen, idet jeg kan anvende færdigheder, jeg har tilegnet mig, i arbejdet. Rent praktisk omfatter arbejdet alt lige fra at skyde content til de sociale platforme, kommunikere med samarbejdspartnere og optimering af deres hjemmeside.</p>
+        </div>
+        <div>
+            <img src="img/selvportraet2.webp">
+        </div>
+        </div>
+        <hr>
+   
+    </main>
+
+
+    <footer>
+    <div class="footer_grid">
+        <div class="footer_menu">
+        <a href="index.html">FORSIDE</a>
+        <a href="projekter.html">PROJEKTER</a>
+        <a href="om.html">OM</a>
+        </div
+        <div>
+            <h3>2024, Sara Grønkjær</h3> 
+        </div>
+    </div>
+    </footer>   
+
     <script src="script.js"></script>
 </body>
 </html>
