--- a/projekter.html
+++ b/projekter.html
@@ -35,7 +35,27 @@
             </div>
         </nav>
     </header>
-    
+
+    <main>
+        <h1>PROJEKTER</h1>
+        <p>Her gives et overblik over de 4 forskellige temaer samt de tilhørende opgaver, som jeg har valgt at fremhæve.</p>
+        <hr>
+
+    </main>
+
+    <footer>
+        <div class="footer_grid">
+            <div class="footer_menu">
+            <a href="index.html">FORSIDE</a>
+            <a href="projekter.html">PROJEKTER</a>
+            <a href="om.html">OM</a>
+            </div
+            <div>
+                <h3>2024, Sara Grønkjær</h3> 
+            </div>
+        </div>
+        </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
