--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
                 <a href="projekter.html">SE PROJEKTER →</a>
             </div>
             <div>
-                <p>Oversigt</p>
+                <p><a href="tema2.html">02 GRUNDLÆGGENDE WEB</a></p>
+                <br>
+                <p><a href="tema3.html">03 GRUNDLÆGGENDE UX/UI</a></p>
+                <br>
+                <p><a href="tema4.html">04 GRUNDLÆGGENDE ANIMATION</a></p>
+                <br>
+                <p><a href="tema5.html">05 GRUNDLÆGGENDE INDHOLD</a></p>
             </div>
             
         </div>
