--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         </div>
 
         <div class="projekter">
-            <h2>PROJEKTER</h2>
+            <h4>PROJEKTER</h4>
         </div>
         <div class="grid_3">
-            <div>
+            <div class="projekter2">
                 <p>Første semester af multimediedesignuddannelsen er bygget op omkring forskellige temaer. Ud af disse har jeg valgt at fremhæve følgende i mit portfolio: Grundlæggende web, grundlæggende UI/UX, animation og grundlæggende indhold. Til hver tema har vi skulle aflevere en større opgave for at vise at vi har nået de læringsmål der er blevet sat. Læs mere om de forskellige temaer, opgaverne og hvad jeg har lært af disse via linket herunder.</p>
                 <br>
                 <a href="projekter.html">SE PROJEKTER →</a>
             </div>
-            <div>
+            <div class="projekter3">
                 <p><a href="tema2.html">02 GRUNDLÆGGENDE WEB</a></p>
                 <br>
                 <p><a href="tema3.html">03 GRUNDLÆGGENDE UX/UI</a></p>
@@ -73,7 +73,6 @@
                 <br>
                 <p><a href="tema5.html">05 GRUNDLÆGGENDE INDHOLD</a></p>
             </div>
-            
         </div>
     </main>
 
