--- a/projekter.html
+++ b/projekter.html
@@ -37,9 +37,10 @@
     </header>
 
     <main>
-        <h1>PROJEKTER</h1>
+        <div class="projekter_tekst">
+        <h2>PROJEKTER</h2>
         <p>Her gives et overblik over de 4 forskellige temaer samt de tilhørende opgaver, som jeg har valgt at fremhæve.</p>
-
+        </div>
     </main>
 
     <footer>
