--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
             </div>
             <div class="projekter3">
                 <p><a href="tema2.html">02 GRUNDLÆGGENDE WEB</a></p>
+                <p>_____________________________________________________________</p>
+                <br>
                 <br>
                 <p><a href="tema3.html">03 GRUNDLÆGGENDE UX/UI</a></p>
                 <br>
-                <p><a href="tema4.html">04 GRUNDLÆGGENDE ANIMATION</a></p>
+                <br>
+                <p><a href="tema4.html">04 ANIMATION</a></p>
+                <br>
                 <br>
                 <p><a href="tema5.html">05 GRUNDLÆGGENDE INDHOLD</a></p>
             </div>
