font str footer

--- a/projekter.html
+++ b/projekter.html
@@ -41,6 +41,14 @@
         <h2>PROJEKTER</h2>
         <p>Her gives et overblik over de 4 forskellige temaer samt de tilhørende opgaver, som jeg har valgt at fremhæve.</p>
         </div>
+
+        <div class="grid_web">
+            <div>
+               <h3>02 GRUNDLÆGGENDE WEB</h3>
+            <img src="img/02web.webp">
+            <a href="tema2.html">WEBSITE →</a> 
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -51,7 +59,7 @@
             <a href="om.html">OM</a>
             </div
             <div>
-                <h3>2024, Sara Grønkjær</h3> 
+                <h5>2024, Sara Grønkjær</h5> 
             </div>
         </div>
         </footer>
