--- a/projekter.html
+++ b/projekter.html
@@ -42,12 +42,24 @@
         <p>Her gives et overblik over de 4 forskellige temaer samt de tilhørende opgaver, som jeg har valgt at fremhæve.</p>
         </div>
 
+        <h3>02 GRUNDLÆGGENDE WEB</h3>
         <div class="grid_web">
             <div>
-               <h3>02 GRUNDLÆGGENDE WEB</h3>
             <img src="img/02web.webp">
             <a href="tema2.html">WEBSITE →</a> 
             </div>
+        </div>
+        
+        <h3>03 GRUNDLÆGGENDE UX/UI</h3>
+        <div class="grid_uxui">
+            <div>
+            <img src="img/03uxui.webp">
+            <a href="tema3.html">DOKUMENTATION →</a> 
+            </div>
+            <div>
+             <img src="img/03uxui2.webp">
+             <a href="tema3.html">PRÆSENTATION →</a> 
+             </div>
         </div>
     </main>
 
