--- a/projekter.html
+++ b/projekter.html
@@ -48,6 +48,7 @@
         <div class="grid_web">
             <div>
             <img src="img/02web.webp">
+            <br>
             <a href="tema2.html">WEBSITE →</a> 
             </div>
         </div>
@@ -58,11 +59,40 @@
         <div class="grid_uxui">
             <div>
             <img src="img/03uxui.webp">
+            <br>
             <a href="tema3.html">DOKUMENTATION →</a> 
             </div>
             <div>
              <img src="img/03uxui2.webp">
+             <br>
              <a href="tema3.html">PRÆSENTATION →</a> 
+             </div>
+        </div>
+
+        <div class="h3">
+            <h3>04 ANIMATION</h3>
+        </div>
+        <div class="grid_animation">
+            <div>
+            <img src="img/04animation.webp">
+            <br>
+            <a href="tema4.html">TEMAOPGAVE →</a> 
+            </div>
+        </div>
+
+        <div class="h3">
+            <h3>05 GRUNDLÆGGENDE INDHOLD</h3>
+        </div>
+        <div class="grid_indhold">
+            <div>
+            <img src="img/05indhold.webp">
+            <br>
+            <a href="tema5.html">VIDEOSITE →</a> 
+            </div>
+            <div>
+             <img src="img/05indhold2.webp">
+             <br>
+             <a href="tema5.html">VIRKSOMHEDSSITE →</a> 
              </div>
         </div>
     </main>
