--- a/projekter.html
+++ b/projekter.html
@@ -47,7 +47,7 @@
         </div>
         <div class="grid_web">
             <div>
-            <img src="img/02web.webp">
+            <a href="https://segproject.dk/kea/02_web/01_website/website/index.html"> <img src="img/02web.webp" alt="Screenshot af site"> </a>
             <br>
             <a href="tema2.html">WEBSITE →</a> 
             </div>
@@ -58,12 +58,12 @@
         </div>
         <div class="grid_uxui">
             <div>
-            <img src="img/03uxui.webp">
+                <a href="https://segproject.dk/kea/03_UX:UI/01_kodet_site/ "> <img src="img/03uxui.webp" alt="Screenshot af site"> </a>
             <br>
             <a href="tema3.html">DOKUMENTATION →</a> 
             </div>
             <div>
-             <img src="img/03uxui2.webp">
+                <a href="https://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK"> <img src="img/03uxui2.webp" alt="Screenshot af slideshow"> </a>
              <br>
              <a href="tema3.html">PRÆSENTATION →</a> 
              </div>
@@ -74,7 +74,7 @@
         </div>
         <div class="grid_animation">
             <div>
-            <img src="img/04animation.webp">
+                <a href="https://segproject.dk/kea/04_animation/website/ "> <img src="img/04animation.webp" alt="Screenshot af site"> </a>
             <br>
             <a href="tema4.html">TEMAOPGAVE →</a> 
             </div>
@@ -85,12 +85,12 @@
         </div>
         <div class="grid_indhold">
             <div>
-            <img src="img/05indhold.webp">
+                <a href="https://segronkjaer.github.io/interview_site/index.html"> <img src="img/05indhold.webp" alt="Screenshot af site"> </a>
             <br>
             <a href="tema5.html">VIDEOSITE →</a> 
             </div>
             <div>
-             <img src="img/05indhold2.webp">
+                <a href="https://segronkjaer.github.io/bagerdygtigt_site/"> <img src="img/05indhold2.webp" alt="Screenshot af site"> </a>
              <br>
              <a href="tema5.html">VIRKSOMHEDSSITE →</a> 
              </div>
