--- a/om.html
+++ b/om.html
@@ -38,11 +38,25 @@
 
     <main>
         <div class="grid_om">
-            <div>
+        <div>
         <h2>OM</h2>
-        <p>For mig udgør multimediedesigneruddannelsen det ideelle studie, da den forener de kreative områder, som jeg er draget af. Fotografi er et af dem, hvilket også afspejler sig i mit online portfolio over mine værker som jeg lavede i forbindelse med tema 3. Derudover fascineres jeg af kommunikation, og at kunne arbejde med dette på forskellige niveauer finder jeg meget givende.
-            Selvom jeg endnu ikke har fastlagt præcis, hvordan jeg vil anvende denne uddannelse, når jeg står overfor at søge job, håber jeg at blive inspireret undervejs i forløbet. 
-            Umildbart kan jeg forestille mig at arbejde i et bureau, der varetager forskellige opgaver for virksomheder såsom at redesigne deres hjemmeside eller lignende. Ved siden af studiet arbejder jeg som SoMe-ansvarlig for en café, hvilket harmonerer godt med multimediedesigneruddannelsen, idet jeg kan anvende færdigheder, jeg har tilegnet mig, i arbejdet. Rent praktisk omfatter arbejdet alt lige fra at skyde content til de sociale platforme, kommunikere med samarbejdspartnere og optimering af deres hjemmeside.</p>
+        <br>
+        <p>Oprindeligt kommer jeg fra Skive, men flyttede for et par år siden til København for at udvikle mig rent personligt og fokusere på min fremtid. Jeg har altid haft en interesse for det kreative og særligt fotografi, hvilket ledte mig til dagshøjskolen Vera, hvor jeg dedikerede et halvt år til at arbejde med fotografiet fra et kunstnerisk perspektiv. Derefter arbejdede jeg fuldtid på en café alt imens jeg reflekterede over, hvilken retning jeg gerne ville gå. Det resulterede i beslutningen om at studere multimediedesign på KEA.</p>
+        <br>
+        <br>
+        <hr>
+        <br>
+        <p>UDDANNELSE</p>
+        <p>STX studentereksamen (Skive Gymnasium & HF)  /  2016-2019</p>
+        <p>Vera dagshøjskole (fotografi)  /  Januar-juni 2022</p>
+        <br>
+        <br>
+        <p>ERHVERVSERFARING</p>
+        <p>TJENER (forskellige steder)  /  2019-2023</p>
+        <p>LOGODESIGN (for Optiel)  /  2021</p>
+        <p>SoMe-ANSVARLIG (Sidecar)  /  2023-nu</p>
+        <br>
+        <hr>
         </div>
         <div>
             <img src="img/selvportraet2.webp">
