--- a/om.html
+++ b/om.html
@@ -62,6 +62,24 @@
             <img src="img/selvportraet2.webp">
         </div>
         </div>
+
+        <div class="grid_om_tekst">
+        <div>
+            <p>For mig udgør multimediedesigneruddannelsen det ideelle studie, da den forener de kreative områder, som jeg er draget af. Derudover fascineres jeg af kommunikation, og at kunne arbejde med dette på forskellige niveauer finder jeg meget givende. 
+                Selvom jeg endnu ikke har fastlagt præcis, hvordan jeg vil anvende denne uddannelse, når jeg står overfor at søge job, håber jeg at blive inspireret undervejs i forløbet. Umildbart kan jeg forestille mig at arbejde i et bureau, der varetager forskellige opgaver for virksomheder såsom at redesigne deres hjemmeside eller lignende. 
+                Ved siden af studiet arbejder jeg som SoMe-ansvarlig for en café, hvilket harmonerer godt med multimediedesigneruddannelsen, idet jeg kan anvende færdigheder, jeg har tilegnet mig, i arbejdet. Rent praktisk omfatter arbejdet alt lige fra at skyde content til deres respektive platforme, kommunikere med samarbejdspartnere og optimering af deres hjemmeside. 
+                Det første semester på uddannelsen har allerede givet mig en masse forskellige færdigheder og erfaringer indenfor både design og kodning. Jeg har forsøgt at skabe et overblik over de vigtigste, hvilket er at finde til højre.</p>
+        </div>
+        <div>
+            <h3>KOMPETENCER</h3>
+            <br>
+            <br>
+            <p>O IDÈGENERERING</p>
+            <p>_______________________________</p>
+            <br>
+        </div>
+
+        </div>
    
     </main>
 
