--- a/om.html
+++ b/om.html
@@ -52,9 +52,9 @@
         <br>
         <br>
         <p>ERHVERVSERFARING</p>
-        <p>TJENER (forskellige steder)  /  2019-2023</p>
-        <p>LOGODESIGN (for Optiel)  /  2021</p>
-        <p>SoMe-ANSVARLIG (Sidecar)  /  2023-nu</p>
+        <p>Tjener (forskellige steder)  /  2019-2023</p>
+        <p>Logodesign (for Optiel)  /  2021</p>
+        <p>SoMe-ansvarlig (Sidecar)  /  2023-nu</p>
         <br>
         <hr>
         </div>
@@ -74,8 +74,29 @@
             <h3>KOMPETENCER</h3>
             <br>
             <br>
-            <p>O IDÈGENERERING</p>
-            <p>_______________________________</p>
+            <p>O    IDÈGENERERING</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    MOODBOARD & STYLETILE</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    PROTOTYPE</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    DESIGN AF WEBSITES</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    PHOTOSHOP, ILLUSTRATOR M.M.</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    VIDEOREDIGERING</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    KODNING AF WEBSITES</p>
+            <p>__________________________________________________________</p>
+            <br>
+            <p>O    GITHUB, FILEZILLA & VS CODE</p>
+            <p>__________________________________________________________</p>
             <br>
         </div>
 
