--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="projekter">
+        <div class="h4_overskrift">
             <h4>PROJEKTER</h4>
         </div>
         <div class="grid_3">
