--- a/om.html
+++ b/om.html
@@ -99,6 +99,28 @@
             <p>__________________________________________________________</p>
             <br>
         </div>
+        </div>
+
+        <div class="grid_billede">
+            <img src="img/billedeafskaerm2.webp">
+            <a href="projekter.html">SE PROJEKTER →</a>
+        </div>
+
+        <div class="h4_overskrift">
+            <h4>KONTAKT</h4>
+        </div>
+        <div class="grid_kontakt">
+            <div>
+                <p>For samarbejde eller lignende kan jeg kontaktes på de forskellige platforme, der er skrevet til højre. Jeg svarer normalt samme dag eller dagen efter.</p>
+            </div>
+            <div>
+                <p>E-MAIL /  sara@gronkjaer.dk</p>
+                <p>INSTAGRAM  / sara_gronkjaer</p>
+                <p>FACEBOOK  /  Sara Grønkjær</p>
+            </div>
+            
+
+        </div>
 
         </div>
    
