--- a/om.html
+++ b/om.html
@@ -113,10 +113,15 @@
             <div>
                 <p>For samarbejde eller lignende kan jeg kontaktes på de forskellige platforme, der er skrevet til højre. Jeg svarer normalt samme dag eller dagen efter.</p>
             </div>
-            <div>
+            <div class="kontaktliste">
                 <p>E-MAIL /  sara@gronkjaer.dk</p>
+                <p>__________________________________________________________</p>
+                <br>
                 <p>INSTAGRAM  / sara_gronkjaer</p>
+                <p>__________________________________________________________</p>
+                <br>
                 <p>FACEBOOK  /  Sara Grønkjær</p>
+                <p>__________________________________________________________</p>
             </div>
             
 
