--- a/om.html
+++ b/om.html
@@ -70,7 +70,7 @@
                 Ved siden af studiet arbejder jeg som SoMe-ansvarlig for en café, hvilket harmonerer godt med multimediedesigneruddannelsen, idet jeg kan anvende færdigheder, jeg har tilegnet mig, i arbejdet. Rent praktisk omfatter arbejdet alt lige fra at skyde content til deres respektive platforme, kommunikere med samarbejdspartnere og optimering af deres hjemmeside. 
                 Det første semester på uddannelsen har allerede givet mig en masse forskellige færdigheder og erfaringer indenfor både design og kodning. Jeg har forsøgt at skabe et overblik over de vigtigste, hvilket er at finde til højre.</p>
         </div>
-        <div>
+        <div class="wordspacing">
             <h3>KOMPETENCER</h3>
             <br>
             <br>
@@ -113,7 +113,7 @@
             <div>
                 <p>For samarbejde eller lignende kan jeg kontaktes på de forskellige platforme, der er skrevet til højre. Jeg svarer normalt samme dag eller dagen efter.</p>
             </div>
-            <div class="kontaktliste">
+            <div class="wordspacing">
                 <p>E-MAIL /  sara@gronkjaer.dk</p>
                 <p>__________________________________________________________</p>
                 <br>
