--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                 <a href="projekter.html">SE PROJEKTER →</a>
             </div>
             <div class="projekter3">
-                <p><a href="tema2.html">02 GRUNDLÆGGENDE WEB</a></p>
+                <p><a href="tema2.html">02. GRUNDLÆGGENDE WEB</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema3.html">03 GRUNDLÆGGENDE UX/UI</a></p>
+                <p><a href="tema3.html">03. GRUNDLÆGGENDE UX/UI</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema4.html">04 ANIMATION</a></p>
+                <p><a href="tema4.html">04. ANIMATION</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema5.html">05 GRUNDLÆGGENDE INDHOLD</a></p>
+                <p><a href="tema5.html">05. GRUNDLÆGGENDE INDHOLD</a></p>
                 <p>_________________________________________________________________</p>
             </div>
         </div>
