--- a/om.html
+++ b/om.html
@@ -45,8 +45,10 @@
         <br>
         <br>
         <br>
+        <br>
         <hr>
         <br>
+        <div class="CV">
         <p>UDDANNELSE</p>
         <p>STX studentereksamen (Skive Gymnasium & HF)  /  2016-2019</p>
         <p>Vera dagshøjskole (fotografi)  /  Januar-juni 2022</p>
@@ -58,6 +60,7 @@
         <p>SoMe-ansvarlig (Sidecar)  /  2023-nu</p>
         <br>
         <hr>
+        </div>
         </div>
         <div class="selvportraet2">
             <img src="img/selvportraet2.webp">
@@ -78,28 +81,28 @@
             <br>
             <br>
             <p>○    IDÈGENERERING</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    MOODBOARD & STYLETILE</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    PROTOTYPE</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    DESIGN AF WEBSITES</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    PHOTOSHOP, ILLUSTRATOR M.M.</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    VIDEOREDIGERING</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    KODNING AF WEBSITES</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
             <p>○    GITHUB, FILEZILLA & VS CODE</p>
-            <p>__________________________________________________________</p>
+            <p>_____________________________________________________________</p>
             <br>
         </div>
         </div>
