--- a/tema2.html
+++ b/tema2.html
@@ -47,6 +47,28 @@
         </div>
         <hr>
 
+        <div class="h4_overskrift">
+            <h4>WEBSITE</h4>
+        </div>
+        <div class="grid_billede">
+            <img src="img/02web.webp">
+            <a href="https://segproject.dk/kea/02_web/01_website/website/index.html">SE SIDEN →</a>
+        </div>
+
+        <div class="proces_tekst">
+            <div>
+                <p>For at holde orden i filerne til opgaven lærte vi at anvende hierarkisk mappestruktur, som jeg efterfølgende har brugt i alle opgaver. Derudover blev vi introduceret til forskellige typer filformater på hjemmesider, hvoraf jeg konventerede de udleverede billeder til webP via ‘Squoosh’ til opgaven. Dette er ligeledes noget jeg har taget med videre til de næste temaopgaver. Som nævnt skulle sitet bygges op ud fra bestemte wireframes og et uddrag herfra kan ses på billedet til højre. Ud fra viden om designkonventioner, gestaltprincipper, styletile, fonte og tekstopsætning skulle vi selv bestemme farver og fonte til siden. Her valgte jeg at gå med en letlæselig, sans-serif font i sort til paragrafferne og en relativ standard serif font i mørkerød til overskrifterne. Derudover gav valgte jeg en beige baggrundsfarve, da jeg syntes det harmonerede godt med indholdet.
+
+                    I forhold til kodning foregik det via HTML og CCS. Målet var at opnå et responsivt design og derfor arbejdede jeg ud fra mobile first-princippet ved at bruge media-queries. Derudover brugte jeg grid til at placere elementerne rigtigt, så det stemte overens med de forskellige wireframes. Vi lærte at integrere webfonte i kodning og her valgte jeg at bruge en font fra Google Fonts. Dette har jeg brugt i stort set alle opgaver siden da.
+                    Til at identificere fejl undervejs i processen brugte jeg browserens develeper tools, hvilket var til stor hjælp. Slutligt skulle både HTML og CSS valideres i VS Code hvorefter det blev oploadet til eget domæne via Filezilla.</p>
+            </div>
+            <div>
+                <h3>UDDRAG FRA PROCESSEN</h3>
+                <img src="img/"
+            </div>
+
+        </div>
+
 
     </main>
 
