--- a/tema2.html
+++ b/tema2.html
@@ -50,7 +50,7 @@
         <div class="h4_overskrift">
             <h4>WEBSITE</h4>
         </div>
-        <div class="grid_billede">
+        <div class="grid_billede2">
             <img src="img/02web.webp">
             <a href="https://segproject.dk/kea/02_web/01_website/website/index.html">SE SIDEN →</a>
         </div>
@@ -64,7 +64,7 @@
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
-                <img src="img/"
+                <img src="img/tema2process.webp">
             </div>
 
         </div>
