--- a/tema2.html
+++ b/tema2.html
@@ -47,7 +47,7 @@
         </div>
         <hr>
 
-        <div class="h4_overskrift">
+        <div class="h4_overskrift2">
             <h4>WEBSITE</h4>
         </div>
         <div class="grid_billede2">
