--- a/tema2.html
+++ b/tema2.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <div class="tema2_overskrift">
+        <div class="tema_overskrift">
             <div>
             <p>PROJEKTER  /  02 GRUNDLÆGGENDE WEB</p>
             <h3>02 GRUNDLÆGGENDE WEB</h3>
@@ -66,10 +66,7 @@
                 <h3>UDDRAG FRA PROCESSEN</h3>
                 <img src="img/tema2process.webp">
             </div>
-
         </div>
-
-
     </main>
 
     <footer>
