--- a/tema3.html
+++ b/tema3.html
@@ -85,13 +85,12 @@
         </div>
         <div class="grid_billede2">
             <img src="img/03uxui2.webp">
-            <a href="ttps://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK">SE OPLÆGGET →</a>
+            <a href="https://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK">SE OPLÆGGET →</a>
         </div>
         <div class="proces_tekst">
             <div>
                 <p>Til at præsentere arbejdsprocessen og løsningen lavede jeg et PowerPoint, som jeg snakkede ud fra. Efter min pitch fik jeg noget brugbart feedback som lød på, at jeg havde en god indledning, fornuftig brug af fagbegreber, grundig research og at det var godt at jeg i min quicktest rent visuelt viste et problem efterfulgt af en løsning. Dog var der også plads til forbedringer. Her lød kritikken på, at nogle af mine slides var en anelse tomme og at mine billeder var lidt små. Derudover manglede der mere indhold i forhold til testene og en tydligere forklaring af, hvordan jeg kom frem til resultaterne. Denne konstruktive feedback har jeg blandt andet anvendt da vi skulle udforme vores pitch om virkssomhedssitet i tema 5.</p>
             </div>
-
     </main>
 
     <footer>
