--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
                 <a href="projekter.html">SE PROJEKTER →</a>
             </div>
             <div class="projekter3">
-                <p><a href="tema2.html">02. GRUNDLÆGGENDE WEB</a></p>
+                <p><a href="tema2.html" class="no_underline">02. GRUNDLÆGGENDE WEB</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema3.html">03. GRUNDLÆGGENDE UX/UI</a></p>
+                <p><a href="tema3.html" class="no_underline">03. GRUNDLÆGGENDE UX/UI</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema4.html">04. ANIMATION</a></p>
+                <p><a href="tema4.html" class="no_underline">04. ANIMATION</a></p>
                 <p>_________________________________________________________________</p>
                 <br>
-                <p><a href="tema5.html">05. GRUNDLÆGGENDE INDHOLD</a></p>
+                <p><a href="tema5.html" class="no_underline">05. GRUNDLÆGGENDE INDHOLD</a></p>
                 <p>_________________________________________________________________</p>
             </div>
         </div>
@@ -83,9 +83,9 @@
     <footer>
         <div class="footer_grid">
             <div class="footer_menu">
-            <a href="index.html">FORSIDE</a>
-            <a href="projekter.html">PROJEKTER</a>
-            <a href="om.html">OM</a>
+            <a href="index.html" class="no_underline">FORSIDE</a>
+            <a href="projekter.html" class="no_underline">PROJEKTER</a>
+            <a href="om.html" class="no_underline">OM</a>
             </div
             <div>
                 <h5>2024, Sara Grønkjær</h5> 
