--- a/tema4.html
+++ b/tema4.html
@@ -78,14 +78,13 @@
     <footer>
         <div class="footer_grid">
             <div class="footer_menu">
-            <a href="index.html">FORSIDE</a>
-            <a href="projekter.html">PROJEKTER</a>
-            <a href="om.html">OM</a>
+            <a href="index.html" class="no_underline">FORSIDE</a>
+            <a href="projekter.html" class="no_underline">PROJEKTER</a>
+            <a href="om.html" class="no_underline">OM</a>
             </div
             <div>
                 <h5>2024, Sara Grønkjær</h5> 
             </div>
-        </div>
     </footer>
     <script src="script.js"></script>
 </body>
