--- a/om.html
+++ b/om.html
@@ -139,15 +139,15 @@
 
 
     <footer>
-    <div class="footer_grid">
-        <div class="footer_menu">
-        <a href="index.html">FORSIDE</a>
-        <a href="projekter.html">PROJEKTER</a>
-        <a href="om.html">OM</a>
-        </div
-        <div>
-            <h5>2024, Sara Grønkjær</h5> 
-        </div>
+        <div class="footer_grid">
+            <div class="footer_menu">
+            <a href="index.html" class="no_underline">FORSIDE</a>
+            <a href="projekter.html" class="no_underline">PROJEKTER</a>
+            <a href="om.html" class="no_underline">OM</a>
+            </div
+            <div>
+                <h5>2024, Sara Grønkjær</h5> 
+            </div>
     </div>
     </footer>   
 
