--- a/tema2.html
+++ b/tema2.html
@@ -51,7 +51,7 @@
             <h4>WEBSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/02web.webp">
+            <img class="border" src="img/02web.webp">
             <a href="https://segproject.dk/kea/02_web/01_website/website/index.html">SE SIDEN →</a>
         </div>
 
