--- a/tema4.html
+++ b/tema4.html
@@ -52,7 +52,7 @@
             <h4>DOKUMENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/04animation.webp">
+            <img class="border" src="img/04animation.webp">
             <a href="https://segproject.dk/kea/04_animation/website/ ">SE SIDEN →</a>
         </div>
 
