--- a/tema5.html
+++ b/tema5.html
@@ -51,7 +51,7 @@
             <h4>VIDEOSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/05indhold.webp">
+            <img class="border" src="img/05indhold.webp">
             <a href="https://segronkjaer.github.io/interview_site/index.html">SE SIDEN →</a>
         </div>
 
@@ -76,7 +76,7 @@
             <h4>VIRKSOMHEDSSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/05indhold2.webp">
+            <img class="border" src="img/05indhold2.webp">
             <a href="https://segronkjaer.github.io/bagerdygtigt_site/ ">SE SIDEN →</a>
         </div>
         <div class="proces_tekst">
