--- a/tema3.html
+++ b/tema3.html
@@ -52,7 +52,7 @@
             <h4>DOKUMENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/03uxui.webp">
+            <img class="border" src="img/03uxui.webp">
             <a href="https://segproject.dk/kea/03_UX:UI/01_kodet_site/">SE SIDEN →</a>
         </div>
 
@@ -84,7 +84,7 @@
             <h4>PRÆSENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img src="img/03uxui2.webp">
+            <img class="border" src="img/03uxui2.webp">
             <a href="https://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK">SE OPLÆGGET →</a>
         </div>
         <div class="proces_tekst">
