--- a/tema2.html
+++ b/tema2.html
@@ -65,7 +65,7 @@
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
-                <img src="img/tema2process.webp">
+                <img class="mindre_billede" src="img/tema2process.webp">
             </div>
         </div>
     </main>
