--- a/tema4.html
+++ b/tema4.html
@@ -69,7 +69,7 @@
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
-                <img src="img/spil.webp">
+                <img class="mindre_billede" src="img/spil.webp">
             </div>
         </div>
         
