justering af billeder

--- a/tema5.html
+++ b/tema5.html
@@ -67,7 +67,7 @@
                 <h3>UDDRAG FRA PROCESSEN</h3>
                 <br>
                 <div class="billeder">
-                    <img src="img/studie.webp">
+                    <img class="mindre_billede2" src="img/studie.webp">
                 </div>
             </div>
         </div>
