--- a/om.html
+++ b/om.html
@@ -63,7 +63,7 @@
         </div>
         </div>
         <div class="selvportraet2">
-            <img src="img/selvportraet2.webp">
+            <img src="img/selvportraet2.webp" alt="Billede af mig">
         </div>
         </div>
 
@@ -108,7 +108,7 @@
         </div>
 
         <div class="grid_billede">
-            <img src="img/billedeafskaerm2.webp">
+            <img src="img/billedeafskaerm2.webp" alt="Billede af skærm">
             <a href="projekter.html">SE PROJEKTER →</a>
         </div>
 
