--- a/tema2.html
+++ b/tema2.html
@@ -51,7 +51,7 @@
             <h4>WEBSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/02web.webp">
+            <img class="border" src="img/02web.webp" alt="Screenshot af site">
             <a href="https://segproject.dk/kea/02_web/01_website/website/index.html">SE SIDEN →</a>
         </div>
 
@@ -65,7 +65,7 @@
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
-                <img class="mindre_billede" src="img/tema2process.webp">
+                <img class="mindre_billede" src="img/tema2process.webp" alt="Process">
             </div>
         </div>
     </main>
