--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="om.html">LÆS OM MIG →</a>
             </div>
             <div class="selvportraet1">
-                <img src="img/selvportraet1.webp">
+                <img src="img/selvportraet1.webp" alt="Billede af mig">
             </div>
         </div>
 
