--- a/tema3.html
+++ b/tema3.html
@@ -52,7 +52,7 @@
             <h4>DOKUMENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/03uxui.webp">
+            <img class="border" src="img/03uxui.webp" alt="Screenshot af site">
             <a href="https://segproject.dk/kea/03_UX:UI/01_kodet_site/">SE SIDEN →</a>
         </div>
 
@@ -76,9 +76,9 @@
                 <h3>UDDRAG FRA PROCESSEN</h3>
                 <br>
                 <div class="billeder">
-                    <img src="img/moodboard.webp">
+                    <img src="img/moodboard.webp" alt="Process">
                     <br>
-                    <img src="img/ideas.webp">
+                    <img src="img/ideas.webp" alt="Process">
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
             <h4>PRÆSENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/03uxui2.webp">
+            <img class="border" src="img/03uxui2.webp" alt="Screenshot af site">
             <a href="https://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK">SE OPLÆGGET →</a>
         </div>
         <div class="proces_tekst">
