--- a/om.html
+++ b/om.html
@@ -41,7 +41,7 @@
         <div>
         <h2>OM</h2>
         <br>
-        <p>Oprindeligt kommer jeg fra Skive, men flyttede for et par år siden til København for at udvikle mig rent personligt og fokusere på min fremtid. Jeg har altid haft en interesse for det kreative og særligt fotografi, hvilket ledte mig til dagshøjskolen Vera, hvor jeg dedikerede et halvt år til at arbejde med fotografiet fra et kunstnerisk perspektiv. Derefter arbejdede jeg fuldtid på en café alt imens jeg reflekterede over, hvilken retning jeg gerne ville gå. Det resulterede i beslutningen om at studere multimediedesign på KEA.</p>
+        <p>Oprindeligt kommer jeg fra Skive, men flyttede for et par år siden til København for at udvikle mig rent personligt og fokusere på min fremtid. Jeg har altid haft en interesse for det kreative og særligt fotografi, hvilket ledte mig til dagshøjskolen Vera, hvor jeg dedikerede et halvt år til at arbejde med fotografiet fra et kunstnerisk perspektiv. Derefter arbejdede jeg fuldtid på en café alt imens jeg reflekterede over, hvilken retning jeg gerne ville gå. Det resulterede i beslutningen om at studere multimediedesigner på KEA.</p>
         <br>
         <br>
         <br>
