--- a/projekter.html
+++ b/projekter.html
@@ -100,14 +100,16 @@
 
     <footer>
         <div class="footer_grid">
-            <div class="footer_menu">
-            <a href="index.html" class="no_underline">FORSIDE</a>
-            <a href="projekter.html" class="no_underline">PROJEKTER</a>
-            <a href="om.html" class="no_underline">OM</a>
-            </div
-            <div>
+            <ul class="footer_menu">
+                <li><a href="index.html" class="no_underline">FORSIDE</a></li>
+                <li><a href="projekter.html" class="no_underline">PROJEKTER</a></li>
+                <li><a href="om.html" class="no_underline">OM</a></li>
+            </ul>
+            
+            <div class="navn">
                 <h5>2024, Sara Grønkjær</h5> 
             </div>
+        </div>
         </footer>
 
     <script src="script.js"></script>
