--- a/om.html
+++ b/om.html
@@ -74,7 +74,7 @@
                 
             <p>Ved siden af studiet arbejder jeg som SoMe-ansvarlig for en café, hvilket harmonerer godt med multimediedesigneruddannelsen, idet jeg kan anvende færdigheder, jeg har tilegnet mig, i arbejdet. Rent praktisk omfatter arbejdet alt lige fra at skyde content til deres respektive platforme, kommunikere med samarbejdspartnere og optimering af deres hjemmeside. </p>
             <br>
-            <p>Det første semester på uddannelsen har allerede givet mig en masse forskellige færdigheder og erfaringer indenfor både design og kodning. Jeg har forsøgt at skabe et overblik over de vigtigste, hvilket er at finde til højre.</p>
+            <p>Det første semester på uddannelsen har allerede givet mig en masse forskellige færdigheder og erfaringer indenfor både design og kodning. Jeg har forsøgt at skabe et overblik over de vigtigste, som er at finde under 'kompetencer.'</p>
         </div>
         <div class="wordspacing">
             <h3>KOMPETENCER</h3>
