plads imellem elementer

--- a/om.html
+++ b/om.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="grid_om_tekst">
-        <div>
+        <div class="om_tekst">
             <p>For mig udgør multimediedesigneruddannelsen det ideelle studie, da den forener de kreative områder, som jeg er draget af. Derudover fascineres jeg af kommunikation, og at kunne arbejde med dette på forskellige niveauer finder jeg meget givende. 
                 Selvom jeg endnu ikke har fastlagt præcis, hvordan jeg vil anvende denne uddannelse, når jeg står overfor at søge job, håber jeg at blive inspireret undervejs i forløbet. Umildbart kan jeg forestille mig at arbejde i et bureau, der varetager forskellige opgaver for virksomheder såsom at redesigne deres hjemmeside eller lignende.</p>
                 
@@ -108,7 +108,7 @@
         </div>
 
         <div class="grid_billede">
-            <img src="img/billedeafskaerm2.webp" alt="Billede af skærm">
+            <img class="billedeafskaerm2" src="img/billedeafskaerm2.webp" alt="Billede af skærm">
             <a href="projekter.html">SE PROJEKTER →</a>
         </div>
 
@@ -116,7 +116,7 @@
             <h4>KONTAKT</h4>
         </div>
         <div class="grid_kontakt">
-            <div>
+            <div class="kontakt_tekst">
                 <p>For samarbejde eller lignende kan jeg kontaktes på de forskellige platforme, der er skrevet til højre. Jeg svarer normalt samme dag eller dagen efter.</p>
             </div>
             <div class="wordspacing">
