--- a/tema2.html
+++ b/tema2.html
@@ -42,7 +42,7 @@
             <p>PROJEKTER  /  02 GRUNDLÆGGENDE WEB</p>
             <h6>02 GRUNDLÆGGENDE WEB</h6>
             <br>
-            <p>I Tema 2 blev vi introduceret til de basale redskaber, der danner grundlag for en multimediedesigners arbejde, både med henblik på kodning såvel som design. Vi fik stillet til opgave at udarbejde et website ud fra et specifikt layoutdiagram og wireframe. Alt indhold i form af tekst og billeder var ligeledes bestemt på forhånd. Denne opgave udgjorde selve studiestartsprøven.</p>
+            <p class="tekst_afstand">I Tema 2 blev vi introduceret til de basale redskaber, der danner grundlag for en multimediedesigners arbejde, både med henblik på kodning såvel som design. Vi fik stillet til opgave at udarbejde et website ud fra et specifikt layoutdiagram og wireframe. Alt indhold i form af tekst og billeder var ligeledes bestemt på forhånd. Denne opgave udgjorde selve studiestartsprøven.</p>
             </div>
         </div>
         <hr>
