--- a/tema4.html
+++ b/tema4.html
@@ -42,7 +42,7 @@
             <p>PROJEKTER  /  04 ANIMATION</p>
             <h6>04 ANIMATION</h6>
             <br>
-            <p>I Tema 3 blev vi introduceret til animation, hvilket både indebar design i Illustrator og kodning i HTML, CSS og JavaScript. Vi fik stillet til opgave at lave vores eget spil, hvoraf der var nogle specifikke krav til spillet som skulle følge. Dette var blandt andet at der skulle være gode og onde objekter at klikke på og at der skulle indgå UI-elementer. Til opgaven skulle vi også lave henholdsvis aktivitetsdiagram og State Machine Diagram i VS code.
+            <p class="tekst_afstand">I Tema 3 blev vi introduceret til animation, hvilket både indebar design i Illustrator og kodning i HTML, CSS og JavaScript. Vi fik stillet til opgave at lave vores eget spil, hvoraf der var nogle specifikke krav til spillet som skulle følge. Dette var blandt andet at der skulle være gode og onde objekter at klikke på og at der skulle indgå UI-elementer. Til opgaven skulle vi også lave henholdsvis aktivitetsdiagram og State Machine Diagram i VS code.
             </p>
             </div>
         </div>
