--- a/tema5.html
+++ b/tema5.html
@@ -42,7 +42,7 @@
             <p>PROJEKTER  /  05 GRUNDLÆGGENDE INDHOLD</p>
             <h6>05 GRUNDLÆGGENDE INDHOLD</h6>
             <br>
-            <p>I Tema 3 opnåede jeg viden og erfaringer indenfor grundlæggende UI/UX. Det indebar alt ligefra research, idéudvikling og design i Figma til brugertest af produktet. I den forbindelse fik vi til opgave at lave et website om et valgfrit emne. Her valgte jeg at lave et online portfolio over mine fotografier. Herefter skulle vi præsentere vores proces og færdige resultat som en pitch.</p>
+            <p class="tekst_afstand">I Tema 3 opnåede jeg viden og erfaringer indenfor grundlæggende UI/UX. Det indebar alt ligefra research, idéudvikling og design i Figma til brugertest af produktet. I den forbindelse fik vi til opgave at lave et website om et valgfrit emne. Her valgte jeg at lave et online portfolio over mine fotografier. Herefter skulle vi præsentere vores proces og færdige resultat som en pitch.</p>
             </div>
         </div>
         <hr>
