--- a/tema5.html
+++ b/tema5.html
@@ -52,7 +52,7 @@
         </div>
         <div class="grid_billede2">
             <img class="border" src="img/05indhold.webp" alt="Screenshot af site">
-            <a href="https://segronkjaer.github.io/interview_site/index.html">SE SIDEN →</a>
+            <a class="link_afstand" href="https://segronkjaer.github.io/interview_site/index.html">SE SIDEN →</a>
         </div>
 
         <div class="proces_tekst">
