--- a/projekter.html
+++ b/projekter.html
@@ -61,7 +61,7 @@
             <div>
                 <a href="https://segproject.dk/kea/03_UX:UI/01_kodet_site/ "> <img class="border" src="img/03uxui.webp" alt="Screenshot af site"> </a>
             <br>
-            <a href="tema3.html">DOKUMENTATION →</a> 
+            <a class="link_afstand" href="tema3.html">DOKUMENTATION →</a> 
             </div>
             <div>
                 <a href="https://1drv.ms/b/s!Ak7hcH0X3CTi9n6QF7EMRkDEy4x1?e=dWRknK"> <img class="border" src="img/03uxui2.webp" alt="Screenshot af slideshow"> </a>
