--- a/tema5.html
+++ b/tema5.html
@@ -51,7 +51,7 @@
             <h4>VIDEOSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/05indhold.webp" alt="Screenshot af site">
+            <img class="border1" src="img/05indhold.webp" alt="Screenshot af site">
             <a class="link_afstand" href="https://segronkjaer.github.io/interview_site/index.html">SE SIDEN →</a>
         </div>
 
@@ -67,7 +67,7 @@
                 <h3>UDDRAG FRA PROCESSEN</h3>
                 <br>
                 <div class="billeder">
-                    <img class="mindre_billede2" src="img/studie.webp" alt="Process">
+                    <img class="mindre_billede3" src="img/studie.webp" alt="Process">
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <h4>VIRKSOMHEDSSITE</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/05indhold2.webp" alt="Screenshot af site">
+            <img class="border1" src="img/05indhold2.webp" alt="Screenshot af site">
             <a href="https://segronkjaer.github.io/bagerdygtigt_site/ ">SE SIDEN →</a>
         </div>
         <div class="proces_tekst">
