--- a/tema4.html
+++ b/tema4.html
@@ -52,7 +52,7 @@
             <h4>DOKUMENTATION</h4>
         </div>
         <div class="grid_billede2">
-            <img class="border" src="img/04animation.webp" alt="Screenshot af site">
+            <img class="border1" src="img/04animation.webp" alt="Screenshot af site">
             <a href="https://segproject.dk/kea/04_animation/website/ ">SE SIDEN →</a>
         </div>
 
@@ -69,7 +69,7 @@
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
-                <img class="mindre_billede" src="img/spil.webp" alt="Process">
+                <img class="mindre_billede2" src="img/spil.webp" alt="Process">
             </div>
         </div>
         
