luxy-sroll-effekt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    
+    <script src="path/to/luxy.js" charset="utf-8"></script>
+    <script charset="utf-8">luxy.init();</script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,6 +41,7 @@
     </header>
 
     <main>
+    <div id="luxy">
         <div class="grid_1">
             <h1>PORTFOLIO</h1>
             <h2>SARA GRØNKJÆR</h2>
@@ -78,6 +82,7 @@
                 <p>_________________________________________________________________</p>
             </div>
         </div>
+    </div>
     </main>
 
     <footer>
@@ -95,5 +100,6 @@
     </footer>
     
     <script src="script.js"></script>
+    <script src="path/to/luxy.js" charset="utf-8"></script>
 </body>
 </html>
